condigura a aplicacao para rodar utilizando o jetty

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin:'application'
+apply plugin: 'jetty'
 
-mainClassName = "Routes"
+mainClassName = "Application"
 applicationName = "skeleton"
 sourceCompatibility = 1.7
 
