--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,22 @@ dependencies {
   compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.+'
   compile "com.github.detro.ghostdriver:phantomjsdriver:1.1.0"
   compile 'org.apache.commons:commons-lang3:3.1'
+  compile 'org.mortbay.jetty:jetty-runner:8.1.1.v20120215'
   testCompile 'junit:junit:4.11'
 }
 
-task stage(dependsOn: ['clean', 'installApp'])
+task copyToLib << {
+    copy {
+        from configurations.compile.copy().setTransitive(false)
+        into "$buildDir/libs"
+        rename { name ->
+            def artifacts = configurations.compile.resolvedConfiguration.resolvedArtifacts
+            def artifact = artifacts.find { it.file.name == name }
+            "${artifact.name}.${artifact.extension}"
+        }
+    }
+}
+
+task stage(dependsOn: ['clean', 'war', 'copyToLib'])
 
 
